added loan
